<resources>
    <string name="app_name">Crosshair Pro</string>
    <string name="channel_description">Crosshair Pro</string>
    <string name="crosshair">crosshair</string>
    <string name="stop">S T O P</string>
    <string name="x">X</string>
    <string name="start">S T A R T</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pro_collection">Pro</string>
    <string name="classic_collection">Classic Collection</string>
    <string name="classic">Classic</string>
    <string name="pro">Pro</string>
    <string name="turn_on_light">Turn on light</string>
    <string name="rate_me">Rate Me</string>
    <string name="gun">gun</string>
    <string name="premium">Premium</string>
    <string name="tap_start">Tap Start</string>
    <string name="package_name">package:com.customscopecommunity.crosshairpro</string>
    <string name="message">Message!!!</string>
    <string name="running_notification">Crosshair Pro is running</string>
    <string name="tap_to_open">Tap to open the app</string>
    <string name="policy_url">https://appranger.blogspot.com/2020/09/crosshair-pro-privacy-policy.html</string>
    <string name="rate_me_url">https://play.google.com/store/apps/details?id=com.customscopecommunity.crosshairpro
    </string>
    <string name="alert_dialog_hint">App requires Floating Window permission to show its crosshairs</string>
    <string name="give_permission">Give permission</string>
    <string name="app_unit_id">ca-app-pub-8201262723803857~4410500643</string>
    <string name="exit">E x i t</string>
    <string name="main_banner">ca-app-pub-8201262723803857/4099791911</string>
    <string name="selected_ntap_start">~Selected~</string>
    <string name="tap_on_crosshair">Tap on the crosshair to get the controller</string>
    <string name="ad">Ad</string>
    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait…</string>
    <string name="initial_window_token_error">Error occurred while creating the controller. Tap on the crosshair to rebuild the controller</string>
    <string name="controller_not_supported">Controller is not supported</string>
</resources>
