<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:padding="@dimen/x10dp">

        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="@dimen/x0dp"
                android:layout_height="@dimen/x50dp"
                android:layout_marginStart="@dimen/x8dp"
                android:layout_marginTop="@dimen/x24dp"
                android:layout_marginEnd="@dimen/x8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/x0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/x5dp"
            >
                <TextView
                        android:id="@+id/classicPackage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/dark_gray"
                        android:gravity="center"
                        android:text="@string/classic"
                        android:textColor="@color/material_red" android:textSize="@dimen/x30sp"
                        android:textStyle="normal|bold"/>

            </androidx.cardview.widget.CardView>

            <Space android:layout_width="@dimen/x5dp" android:layout_height="match_parent"/>

            <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/x0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/x5dp"
            >

                <TextView
                        android:id="@+id/proPackage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/dark_gray"
                        android:gravity="center"
                        android:text="@string/pro"
                        android:textColor="@color/material_red" android:textSize="@dimen/x30sp"
                        android:textStyle="normal|bold"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <FrameLayout android:id="@+id/frameLayout" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/x8dp"
                     android:layout_marginEnd="@dimen/x8dp"
                     android:layout_marginBottom="@dimen/x70dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">

            <Button
                    android:id="@+id/buttonStop"
                    style="@android:style/Widget.Material.Button.Inset"
                    android:layout_width="@dimen/x80dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/material_red"
                    android:text="@string/stop"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/x16sp"
                    android:textStyle="bold"/>
            <Button
                    android:id="@+id/buttonStart"
                    style="@android:style/Widget.Material.Button.Inset"
                    android:layout_width="@dimen/x80dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/material_green"
                    android:text="@string/start"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/x16sp"
                    android:textStyle="bold"/>


        </FrameLayout>
        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" android:contentDescription="@string/gun"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:srcCompat="@drawable/rightgun"/>
        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/gun" app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:srcCompat="@drawable/leftgun"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>